# copybook-rs

./: .api-freeze  .coderabbit.yaml  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  ARCHITECTURE_REVIEW_REPORT.md  CHANGELOG-old.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_RELEASE_ROADMAP.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EVALUATION_REPORT.md  GEMINI.md  GIT_CLIFF_SETUP.md  IMPLEMENTATION_SUMMARY.md  ISSUE_74_DOCUMENTATION_AUDIT_REPORT.md  LICENSE_SCOPE.md  PERFORMANCE_VALIDATION_FINAL.md  PHASE_N2A_SUMMARY.md  PRODUCTION_READINESS.md  PROMOTION_VALIDATION_LEDGER.md  PR_105_COMPREHENSIVE_REVIEW_ASSESSMENT.md  PR_61_PROMOTION_VALIDATION_LEDGER.md  PR_61_TDD_TEST_VALIDATION_REPORT.md  PR_67_FINAL_PROMOTION_ASSESSMENT.md  PR_77_INTEGRATIVE_GATE_SUMMARY.md  PR_DESCRIPTION.md  PR_VALIDATION_NOTES.md  README.md  RELEASE_ROADMAP_DIAGRAMS.md  RENAMES_EXPLORATION_REPORT.md  REPORT.md  RESEARCH_ISSUE_59_MACRO_TRACKER.md  ROADMAP.md  ROADMAP_MVP.md  (+78 more)
copybook-arrow/: Cargo.toml  README.md
copybook-arrow/examples/: batch_processing.rs  decode_to_arrow.rs  decode_to_parquet.rs
copybook-arrow/src/: batch_builder.rs  builders.rs  decode_direct.rs  ipc.rs  legacy.rs  lib.rs  options.rs  parquet_writer.rs  schema_convert.rs  streaming.rs
copybook-arrow/tests/: arrow_integration_comprehensive.rs  batch_builder_tests.rs  schema_convert_tests.rs
copybook-bench/: BASELINE_METHODOLOGY.md  CHANGELOG.md  Cargo.toml  HARDWARE_SPECS.md  README.md
copybook-bench/benches/: comp3.rs  decode_performance.rs  decode_performance.rs.bak  diagnostics_benches.rs  encode_performance.rs  enterprise_performance.rs  progressive.rs
copybook-bench/src/: baseline.rs  health.rs  lib.rs  memory.rs  regression.rs  reporting.rs
copybook-bench/test_fixtures/: README.md  VALIDATION_REPORT.md
copybook-bench/tests/: README.md  audit_performance_simple.rs  baseline_management_mutation.rs  baseline_promotion_workflow_ac5.rs  baseline_reconciliation.rs  benchmark_reporting_infrastructure_ac1.rs  ci_integration.rs  cicd_integration_github_workflows_ac9.rs  cli_tool_mutation_testing.rs  diagnostics.rs  end_to_end_workflow_validation_ac10.rs  enterprise_audit_compliance_ac7.rs  error_handling_validation_ac8.rs  golden_fixtures_ac6_performance_integration.rs  issue_35_security_scanning_integration.rs  json_fuzzing_tests.rs  json_schema_validation_ac2.rs  panic_elimination_tests.rs  performance_regression_detection_ac7.rs  performance_report_generation_ac3.rs  pr_comment_automation_ac4.rs  progressive_complexity.rs  regression_detection.rs  slo_validation_performance_floors_ac6.rs  zoned_encoding_performance_tests.rs
copybook-cli/: Cargo.toml  README.md  build.rs
copybook-cli-io/: Cargo.toml  README.md
copybook-cli-io/src/: lib.rs
copybook-cli/src/: exit_codes.rs  main.rs  utils.rs
copybook-cli/tests/: audit_cli_comprehensive.rs  broken_pipe.rs  cli_argument_parsing.rs  cli_golden_fixtures.rs  cli_help_version.rs  cli_misuse.rs  cli_policy.rs  cli_projection_integration.rs  common.rs  determinism_cli.rs  dialect_cli_d2_tests.rs  dialect_fixtures_d3_tests.rs  exit_code_mapping.rs  feature_flags_cli.rs  inspect_edited_pic_fails.rs  inspect_fixed_form_ok.rs  inspect_odo_ok.rs  inspect_redefines_ok.rs  metrics_smoke.rs  panic_elimination_tests.rs  panic_strategy.rs  stderr_pipe_truncation.rs  stdout_clean.rs  structured_diagnostics.rs  support_cli.rs  test_utils.rs  try_it_now_demo.rs  zoned_encoding_cli_tests.rs
copybook-codec/: CHANGELOG.md  Cargo.toml  README.md  debug_ascii.rs  debug_decode.rs  debug_schema.rs
copybook-codec-memory/: Cargo.toml  README.md
copybook-codec-memory/src/: lib.rs  sequence_ring.rs  streaming.rs  tests.rs  worker_pool.rs
copybook-codec/examples/: charset_perf.rs  configuration_demo.rs  record_iterator.rs  scratch_buffers.rs  sequence_ring.rs  test_decode_record.rs  worker_pool.rs
copybook-codec/src/: charset.rs  corruption.rs  determinism.rs  edited_pic.rs  fidelity.rs  iterator.rs  json.rs  lib.rs  lib_api.rs  memory.rs  numeric.rs  odo_redefines.rs  options.rs  processor.rs  record.rs  roundtrip.rs  zoned_overpunch.rs
copybook-codec/tests/: audit_integration_simple.rs  binary_roundtrip_fidelity_tests.proptest-regressions  binary_roundtrip_fidelity_tests.rs  canonical_fixtures.rs  cobol_fixture_zoned_encoding_tests.rs  comp3_format_verification.rs  comp3_property_tests.proptest-regressions  comp3_property_tests.rs  comp_float_codec_tests.rs  comp_float_golden_tests.rs  comprehensive_numeric_tests.rs  comprehensive_numeric_tests.rs.ignore  comprehensive_odo_redefines_tests.rs  comprehensive_rdw_tests.rs  comprehensive_rdw_tests.rs.ignore  comprehensive_redefines_odo_tests.rs  comprehensive_redefines_odo_tests.rs.ignore  decimal_edge_cases.rs  decimal_zero_formatting_consistency.rs  determinism_comprehensive.rs  determinism_microcrate_integration.rs  edited_pic_codec_rejection.rs  edited_pic_decode_e2_tests.rs  edited_pic_encode_e3_tests.rs  edited_pic_encode_tests.rs  encode_options_zoned_encoding_tests.rs  error_code_tests.rs  (+38 more)
copybook-core/: CHANGELOG.md  Cargo.toml  README.md  audit.jsonl  test_odo.rs
copybook-corruption/: Cargo.toml  README.md
copybook-exit-codes/: Cargo.toml  README.md
copybook-feature-flags/: Cargo.toml  README.md
copybook-feature-flags-config/: Cargo.toml  README.md
copybook-fixed/: Cargo.toml  README.md
copybook-gen/: CHANGELOG.md  Cargo.toml  README.md
copybook-governance-eval/: Cargo.toml  README.md
copybook-governance-grid/: Cargo.toml  README.md
copybook-pic/: Cargo.toml  README.md
copybook-rdw/: Cargo.toml  README.md
copybook-rdw-primitives/: Cargo.toml  README.md
copybook-record-format/: Cargo.toml  README.md
copybook-record-io/: Cargo.toml  README.md
copybook-record-iterator/: Cargo.toml  README.md
copybook-scratch/: Cargo.toml  README.md
copybook-sensitive/: Cargo.toml  README.md
copybook-sequence-ring/: Cargo.toml
copybook-support-id/: Cargo.toml
copybook-support-matrix/: Cargo.toml
fuzz/: Cargo.toml  README.md
xtask/: Cargo.toml  README.md
(+1823 files in other folders)
