[workspace]
members = [
    "copybook-core",
    "copybook-codec",
    "copybook-cli",
    "copybook-gen",
    "copybook-bench",
    "copybook-arrow",
    "xtask",
    "tests/bdd",
    "tests/proptest",
    "examples/kafka_pipeline",
]
resolver = "2"

[workspace.package]
version = "0.4.3"
edition = "2024"
rust-version = "1.92" # MSRV (validated in .github/workflows/ci.yml)
license = "AGPL-3.0-or-later"
authors = ["copybook-rs contributors"]
repository = "https://github.com/EffortlessMetrics/copybook-rs"
homepage = "https://github.com/EffortlessMetrics/copybook-rs"
description = "Modern, memory-safe parser/codec for COBOL copybooks and fixed-record data"
keywords = ["cobol", "mainframe", "etl", "parser", "codec"]
categories = ["parsing", "encoding", "command-line-utilities"]

[workspace.dependencies]
# Internal workspace crates (pin exact versions for publish)
copybook-core = { version = "=0.4.3", path = "copybook-core" }
copybook-codec = { version = "=0.4.3", path = "copybook-codec" }
copybook-arrow = { version = "=0.4.3", path = "copybook-arrow" }

# Core dependencies
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_plain = "1.0.2"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Memory management dependencies
smallvec = "1.15.1"
crossbeam-channel = "0.5.15"
indexmap = { version = "2.13.0", features = ["serde"] }

# CLI dependencies
clap = { version = "4.5.57", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tempfile = "3.24.0"

# Telemetry dependencies
metrics = "0.24.3"

# Parsing dependencies
logos = "0.16.1"
regex = "1.12.3"

# Crypto dependencies
sha2 = "0.10.9"
base64 = "0.22.1"
blake3 = "1.8.3"

# Testing dependencies
proptest = "1.10.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
hex = "0.4.3"
assert_cmd = "2.1.2"
predicates = "3.1.3"

# BDD testing dependencies
cucumber = "0.22.1"
futures = "0.3.31"

# Task automation dependencies
anyhow = "1.0.101"

# Random number generation dependencies
rand = "0.10.0"
rand_core = "0.9.5"

# Enterprise audit dependencies
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }

# TOML parsing
toml = "0.9.11"

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"

[profile.dev]
debug = true
panic = "unwind"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Panic prevention lints (deny rather than forbid to allow selective local overrides)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"

# Performance lints
missing_inline_in_public_items = "warn"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
