[package]
name = "copybook-arrow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "COBOL schema conversion to Apache Arrow and Parquet formats."
documentation = "https://docs.rs/copybook-arrow"
readme = "README.md"
keywords = ["cobol", "copybook", "arrow", "parquet", "mainframe"]
categories = ["encoding", "data-structures", "parsing"]

# Keep tarballs slim; whitelist essential files
include = ["src/**", "examples/**", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = false
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Internal workspace dependencies
copybook-core = { workspace = true }
copybook-codec = { workspace = true }

# Arrow and Parquet dependencies
arrow = { version = "55.0", features = ["json"] }
parquet = { version = "57.3", features = ["arrow"] }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
# Enable experimental features
experimental = []

[lints]
workspace = true
