[package]
name = "copybook-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Performance benchmarks for copybook-rs"
publish = false

[[bench]]
name = "decode_performance"
harness = false

[[bench]]
name = "comp3"
harness = false

[[bench]]
name = "progressive"
harness = false

[[bench]]
name = "diagnostics_benches"
harness = false
required-features = ["diagnostics"]

[dependencies]
copybook-core = { path = "../copybook-core" }
copybook-codec = { path = "../copybook-codec" }
criterion.workspace = true
serde_json.workspace = true
sha2.workspace = true
num_cpus = "1.17.0"
chrono = { version = "0.4.42", default-features = false, features = ["serde", "std", "clock"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"

[dev-dependencies]
tempfile = "3.23.0"

[features]
default = []
# AC4: Progressive complexity benchmarks for developer profiling (PERF=1 mode)
progressive = []
# AC5: Diagnostics benchmarks for infrastructure overhead measurement (opt-in)
diagnostics = []
[lints]
workspace = true
