[package]
name = "copybook-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Benchmark harness and baseline tooling for copybook-rs"
readme = "README.md"
keywords = ["cobol", "copybook", "benchmark", "performance", "mainframe"]
categories = ["development-tools::profiling", "encoding"]
publish = false

[[bench]]
name = "decode_performance"
harness = false

[[bench]]
name = "comp3"
harness = false

[[bench]]
name = "progressive"
harness = false

[[bench]]
name = "diagnostics_benches"
harness = false
required-features = ["diagnostics"]

[dependencies]
copybook-core = { workspace = true }
copybook-codec = { workspace = true }
criterion.workspace = true
serde_json.workspace = true
sha2.workspace = true
num_cpus = { workspace = true }
chrono = { workspace = true, features = ["serde", "std", "clock"] }
serde = { workspace = true }
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
regex.workspace = true
[lints]
workspace = true

[features]
default = []
# AC4: Progressive complexity benchmarks for developer profiling (PERF=1 mode)
progressive = []
# AC5: Diagnostics benchmarks for infrastructure overhead measurement (opt-in)
diagnostics = []
# Performance-only tests: throughput assertions for dedicated perf workflow
perf = []
