[package]
name = "copybook-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for parsing/decoding/encoding COBOL copybooks at GiB/s throughput."
documentation = "https://docs.rs/copybook-cli"
readme = "README.md"
keywords = ["cobol", "copybook", "cli", "ebcdic"]
categories = ["command-line-utilities", "encoding"]

# Keep tarballs slim; whitelist essential files
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = false
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "copybook"
path = "src/main.rs"

[dependencies]
copybook-core = { workspace = true }
copybook-codec = { workspace = true }
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tempfile.workspace = true
md5 = "0.8.0"
serde.workspace = true
chrono.workspace = true

[features]
default = []
audit = ["copybook-core/audit"]

[dev-dependencies]
proptest.workspace = true
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
[lints]
workspace = true
