[package]
name = "copybook-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for parsing/decoding/encoding COBOL copybooks at GiB/s throughput."
documentation = "https://docs.rs/copybook-cli"
readme = "README.md"
keywords = ["cobol", "copybook", "cli", "ebcdic"]
categories = ["command-line-utilities", "encoding"]
build = "build.rs"

# Keep tarballs slim; whitelist essential files
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = false
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "copybook"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
md5 = "0.8.0"
serde.workspace = true
chrono.workspace = true
anyhow.workspace = true
copybook-core = { workspace = true }
copybook-codec = { workspace = true }
tokio = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { version = "0.17.2", optional = true, features = ["http-listener"] }

[features]
default = []
audit = ["copybook-core/audit", "dep:tokio"]
soak = []
metrics = [
    "copybook-codec/metrics",
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
    "dep:tokio",
]

[dev-dependencies]
proptest.workspace = true
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"
reqwest = { version = "0.12.24", features = ["blocking"] }
serial_test = "3.2.0"
os_pipe = "1.2"

[lints]
workspace = true
