# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "copybook-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for parsing, decoding, encoding, and verifying COBOL copybook data."
documentation = "https://docs.rs/copybook-cli"
readme = "README.md"
keywords = ["cobol", "copybook", "cli", "mainframe", "ebcdic"]
categories = ["command-line-utilities", "encoding"]
build = "build.rs"

# Keep tarballs slim; whitelist essential files
include = ["src/**", "Cargo.toml", "README.md", "LICENSE", "build.rs"]

[package.metadata.docs.rs]
all-features = false
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "copybook"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
md5 = "0.8.0"
serde.workspace = true
chrono.workspace = true
anyhow.workspace = true
copybook-core = { workspace = true }
copybook-codec = { workspace = true }
copybook-arrow = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { version = "0.18.1", optional = true, features = ["http-listener"] }
toml.workspace = true

[features]
default = []
soak = []
arrow = ["dep:copybook-arrow"]
audit = ["copybook-core/audit", "dep:tokio"]
metrics = [
    "copybook-codec/metrics",
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
    "dep:tokio",
]

[dev-dependencies]
proptest.workspace = true
assert_cmd.workspace = true
assert_fs = "1.1.3"
predicates.workspace = true
reqwest = { version = "0.13.2", features = ["blocking"] }
serial_test = "3.3.1"
os_pipe = "1.2.3"

[lints]
workspace = true
