[package]
name = "copybook-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Encoding and decoding codecs for COBOL data types"
keywords.workspace = true
categories.workspace = true

[dependencies]
copybook-core = { path = "../copybook-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
clap.workspace = true
base64.workspace = true
sha2.workspace = true
smallvec.workspace = true
crossbeam-channel.workspace = true

[dev-dependencies]
proptest.workspace = true
hex.workspace = true

[features]
default = ["comp3_fast"]
comprehensive-tests = []
# COMP-3 fast path optimizations
comp3_fast = []
comp3_unsafe = []