[package]
name = "copybook-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-throughput COBOL copybook codec: decode/encode, streaming, codepages."
documentation = "https://docs.rs/copybook-codec"
readme = "README.md"
keywords = ["cobol", "copybook", "codec", "ebcdic", "streaming"]
categories = ["encoding", "parsing", "command-line-utilities"]

# Keep tarballs slim; whitelist essential files
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = false
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
copybook-core = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
clap.workspace = true
base64.workspace = true
sha2.workspace = true
smallvec.workspace = true
crossbeam-channel.workspace = true
indexmap.workspace = true
metrics = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
hex.workspace = true
tempfile.workspace = true
anyhow.workspace = true
assert_cmd = "2.1.1"
predicates = "3.1.3"

[features]
default = ["comp3_fast"]
comprehensive-tests = []
# COMP-3 fast path optimizations
comp3_fast = []
comp3_unsafe = []
metrics = ["dep:metrics"]
audit = ["copybook-core/audit"]

[lints]
workspace = true
