# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "copybook-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic COBOL copybook codec for EBCDIC/ASCII fixed and RDW records."
documentation = "https://docs.rs/copybook-codec"
readme = "README.md"
keywords = ["cobol", "copybook", "codec", "ebcdic", "streaming"]
categories = ["encoding", "parsing", "data-structures"]

# Keep tarballs slim; whitelist essential files
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = false
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
copybook-core = { workspace = true }
copybook-charset = { workspace = true, features = ["clap"] }
copybook-options.workspace = true
copybook-corruption.workspace = true
copybook-overpunch.workspace = true
copybook-fixed.workspace = true
copybook-rdw.workspace = true
copybook-record-io.workspace = true
copybook-determinism.workspace = true
copybook-error.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
clap.workspace = true
base64.workspace = true
sha2.workspace = true
copybook-codec-memory.workspace = true
indexmap.workspace = true
metrics = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
hex.workspace = true
tempfile.workspace = true
anyhow.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
copybook-options.workspace = true

[features]
default = ["comp3_fast"]
comprehensive-tests = []
# COMP-3 fast path optimizations
comp3_fast = []
comp3_unsafe = []
metrics = ["dep:metrics"]
audit = ["copybook-core/audit"]

[lints]
workspace = true
