[package]
name = "copybook-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core COBOL copybook parser, schema, and validation primitives."
documentation = "https://docs.rs/copybook-core"
readme = "README.md"
keywords = ["cobol", "copybook", "mainframe", "ebcdic", "parser"]
categories = ["parsing", "data-structures", "encoding"]

# Keep tarballs slim; whitelist essential files
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = false
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
logos.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = []
comprehensive-tests = []