[package]
name = "copybook-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core COBOL copybook parser, schema, and validation primitives."
documentation = "https://docs.rs/copybook-core"
readme = "README.md"
keywords = ["cobol", "copybook", "mainframe", "ebcdic", "parser"]
categories = ["parsing", "data-structures", "encoding"]

# Keep tarballs slim; whitelist essential files
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = false
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
thiserror.workspace = true
tracing.workspace = true
logos.workspace = true
sha2.workspace = true

# Audit system dependencies (only when audit feature is enabled)
async-trait = { version = "0.1.89", optional = true }
chrono = { version = "0.4.42", features = ["serde"], optional = true }
hex = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
anyhow = "1.0.100"
proptest.workspace = true
tempfile.workspace = true
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[features]
default = []
audit = ["dep:async-trait", "dep:chrono", "dep:hex", "dep:rand"]  # Enable audit system (disabled by default for performance)
comprehensive-tests = []

[lints]
workspace = true
