[package]
name = "copybook-feature-flags"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Feature flag contracts and runtime controls for copybook-rs governance."
documentation = "https://docs.rs/copybook-feature-flags"
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
keywords = ["cobol", "copybook", "feature-flags", "governance"]
categories = ["config", "development-tools"]

[dependencies]
serde.workspace = true
serde_plain.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
default = []

[lints]
workspace = true
