# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "copybook-fixed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fixed-length (LRECL) record framing reader/writer primitives for copybook-rs"
documentation = "https://docs.rs/copybook-fixed"
readme = "README.md"
keywords = ["cobol", "fixed", "lrecl", "record"]
categories = ["encoding", "parsing", "data-structures"]

include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = false
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
copybook-core.workspace = true
copybook-error.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
