[package]
name = "copybook-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Test fixture and synthetic data generation for copybook-rs"
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
copybook-core = { path = "../copybook-core" }
copybook-codec = { path = "../copybook-codec" }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
sha2 = "0.10.9"
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
proptest.workspace = true