[package]
name = "copybook-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Test fixture and synthetic dataset generation for copybook-rs"
keywords = ["cobol", "copybook", "fixtures", "testing", "mainframe"]
categories = ["development-tools::testing", "encoding"]
publish = false

[dependencies]
copybook-core = { path = "../copybook-core" }
copybook-codec = { path = "../copybook-codec" }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
sha2.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
[lints]
workspace = true
