# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "copybook-rdw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RDW header primitives and buffered framing helpers for copybook-rs"
documentation = "https://docs.rs/copybook-rdw"
readme = "README.md"
keywords = ["cobol", "rdw", "record", "framing"]
categories = ["encoding", "parsing", "data-structures"]

include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = false
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
copybook-error.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
