# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "copybook-record-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Microcrate for fixed vs RDW record format contracts"
documentation = "https://docs.rs/copybook-record-format"
readme = "README.md"
keywords = ["cobol", "copybook", "record", "rdw", "fixed"]
categories = ["encoding", "data-structures"]

include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = false
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde.workspace = true
clap.workspace = true

[lints]
workspace = true
